--- a/agricultural_products_store/app/src/main/res/layout/activity_login.xml
+++ b/agricultural_products_store/app/src/main/res/layout/activity_login.xml
@@ -109,7 +109,7 @@
             android:text="Quên mật khẩu?"
             app:layout_constraintTop_toBottomOf="@+id/button_login"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/text3"
+            app:layout_constraintRight_toLeftOf="@+id/register"
             android:layout_marginTop="24dp"
             android:textSize="17dp"
             android:textColor="@color/xanh_luc"
@@ -125,13 +125,13 @@
             android:textStyle="bold"
             android:textSize="17dp"
             app:layout_constraintStart_toEndOf="@+id/text1"
-            app:layout_constraintEnd_toStartOf="@+id/text3"
+            app:layout_constraintEnd_toStartOf="@+id/register"
             app:layout_constraintLeft_toRightOf="@+id/text1"
             app:layout_constraintTop_toBottomOf="@+id/button_login"
             android:layout_marginTop="24dp"
             ></TextView>
         <TextView
-            android:id="@+id/text3"
+            android:id="@+id/register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
