--- a/agricultural_products_store/app/src/main/res/values/themes.xml
+++ b/agricultural_products_store/app/src/main/res/values/themes.xml
@@ -19,6 +19,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="Theme.AppCompat.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
     <style name="Theme.Agricultural_products_store.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.Agricultural_products_store.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
