--- a/agricultural_products_store/app/src/main/res/layout/activity_login.xml
+++ b/agricultural_products_store/app/src/main/res/layout/activity_login.xml
@@ -19,6 +19,27 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.12"></ImageView>
+
+        <ProgressBar
+            android:visibility="gone"
+            android:id="@+id/progress_bar"
+            style="@style/Widget.AppCompat.ProgressBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="70dp"
+            android:indeterminate="true"
+            android:indeterminateTint="@color/xanh_luc"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.511"></ProgressBar>
+
         <TextView
             android:id="@+id/textview1"
             android:layout_width="match_parent"
