--- a/agricultural_products_store/app/src/main/res/layout/card_category.xml
+++ b/agricultural_products_store/app/src/main/res/layout/card_category.xml
@@ -27,8 +27,7 @@
             android:layout_centerHorizontal="true"
             android:id="@+id/textCardCategory"
             android:text="danhmuc"
-            android:textStyle="bold"
-            android:textColor="@color/xanh_luc"
+            android:textColor="@color/black"
             android:textSize="21dp"
             android:fontFamily="sans-serif-condensed"
             android:layout_below="@+id/imageCardCategory"
