--- a/agricultural_products_store/app/src/main/res/layout/fragment_show_product.xml
+++ b/agricultural_products_store/app/src/main/res/layout/fragment_show_product.xml
@@ -3,14 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.DiscountFragment">
+    tools:context=".fragment.ShowProductFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/viewXam"
-        android:id="@+id/recyclerViewPayment"
+        android:id="@+id/recyclerShowProduct"
         ></androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
