--- a/agricultural_products_store/app/src/main/res/values/colors.xml
+++ b/agricultural_products_store/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="xanh_luc">#649B75</color>
     <color name="xam">#E6EAE7</color>
+    <color name="xamtrang">#F6F6F6</color>
 </resources>
