--- a/agricultural_products_store/app/src/main/res/values/themes.xml
+++ b/agricultural_products_store/app/src/main/res/values/themes.xml
@@ -13,7 +13,9 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-
+    <style name="customRatingBar"
+        parent="android:style/Widget.Material.RatingBar.Small">
+    </style>
     <style name="Theme.Agricultural_products_store.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
