--- a/agricultural_products_store/app/src/main/res/menu/bottom_nav.xml
+++ b/agricultural_products_store/app/src/main/res/menu/bottom_nav.xml
@@ -25,7 +25,7 @@
 
     <item
         android:id="@+id/discount"
-        android:title="Khuyến mãi"
+        android:title="Bình luận "
         android:icon="@drawable/ic_discount"
         android:enabled="true"
         app:cnb_backgroundColor="@color/white"
