--- a/agricultural_products_store/app/src/main/res/layout/fragment_discount.xml
+++ b/agricultural_products_store/app/src/main/res/layout/fragment_discount.xml
@@ -5,12 +5,37 @@
     android:layout_height="match_parent"
     tools:context=".fragment.DiscountFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/relativeHeader"
+        >
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/iconlogo"
+            android:id="@+id/imageHome"
+            android:layout_centerInParent="true"
+            ></ImageView>
+    </RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/xanh_luc"
+        android:textSize="24dp"
+        android:text="Danh sách bình luận"
+        android:layout_below="@+id/relativeHeader"
+        android:layout_marginTop="12dp"
+        android:layout_marginLeft="12dp"
+        android:id="@+id/text"
+        ></TextView>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/viewXam"
-        android:id="@+id/recyclerViewPayment"
+        android:id="@+id/recyclerViewCMT"
+        android:layout_below="@+id/text"
+        android:layout_marginTop="12dp"
+        android:layout_marginLeft="12dp"
         ></androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
