--- a/agricultural_products_store/app/src/main/res/values/themes.xml
+++ b/agricultural_products_store/app/src/main/res/values/themes.xml
@@ -20,7 +20,9 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-
+    <style name="CustomTabStyle" parent="TextAppearance.Design.Tab">
+    <item name="android:textSize">10dp</item>
+        </style>
     <style name="Theme.AppCompat.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
